# beta-auth-microservice

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  .style.yapf  Dockerfile  LINTING_CHECKLIST.md  PROJECT_CHECKLIST.md  README.md  cloudbuild.yaml  main.py  pyproject.toml  run.py  sample.env  setup.py
app/: __init__.py
app/controllers/: __init__.py  auth_controller.py  health_controller.py  root_controller.py
app/core/: __init__.py  config.py  logging_config.py
app/endpoints/: __init__.py
app/endpoints/v1/: __init__.py
app/endpoints/v1/auth/: __init__.py  router.py
app/endpoints/v1/health/: __init__.py  router.py
app/endpoints/v1/root/: __init__.py  router.py
app/endpoints/v1/test/: __init__.py  router.py
app/middlewares/: __init__.py  logging.py
app/models/: __init__.py  user.py
template-microservice/: pyproject.toml  run.py
template-microservice/app/core/: config.py
templates/: login.html
tests/integration/: test_auth_flow.py
